# qts

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTICE  README.md  VERSIONS.md  pyproject.toml  voice_clone_prompt_pb2.py
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  cargo-release.yml  ci.yml  codeql.yml  hf-release.yml  model-integration.yml  test.yml
crates/ggml/: Cargo.toml
crates/ggml-sys/: Cargo.toml  build.rs
crates/ggml/src/: lib.rs
crates/qts/: Cargo.toml  build.rs
crates/qts/benches/: synthesize.rs
crates/qts/examples/: benchmark_synthesize.rs  dump_codes.rs  dump_first_frame_hidden.rs  dump_tokens.rs  synthesize_wav.rs
crates/qts/src/: custom_voice.rs  lib.rs  synthesis_profile.rs  voice_clone_prompt.rs
crates/qts/src/model/: loader.rs  paths.rs
crates/qts/src/pipeline/: audio_code_encoder.rs  backend.rs  mod.rs  soxr_resampler.rs  tokenizer.rs  tts_transformer.rs  vocoder.rs
crates/qts/tests/: audio_code_encoder.rs  integration_model_dir.rs
crates/qts_cli/: Cargo.toml
crates/qts_cli/src/: cli_support.rs  main.rs  tui.rs
crates/qts_ggml/: Cargo.toml
crates/qts_ggml_sys/: Cargo.toml  build.rs
crates/qts_ggml_sys/src/: lib.rs
crates/qwen3-tts/: Cargo.toml  build.rs
crates/qwen3-tts-cli/: Cargo.toml
crates/qwen3-tts-cli/src/: cli_support.rs  main.rs  tui.rs
crates/qwen3-tts/benches/: synthesize.rs
crates/qwen3-tts/examples/: benchmark_synthesize.rs  dump_codes.rs  dump_first_frame_hidden.rs  dump_tokens.rs  synthesize_wav.rs
crates/qwen3-tts/src/: error.rs  hf.rs  lib.rs  synthesis_profile.rs  voice_clone_prompt.rs
crates/qwen3-tts/src/model/: loader.rs  paths.rs
crates/qwen3-tts/src/pipeline/: backend.rs  mod.rs  speaker_encoder.rs  tokenizer.rs  tts_transformer.rs  vocoder.rs
crates/qwen3-tts/tests/: integration_model_dir.rs
docs/: huggingface-model-card.md  models.md  testing.md
qwen3_tts_native_scripts/: __init__.py  export_model_artifacts.py  export_speaker_bin.py  export_voice_clone_prompt.py
scripts/: __init__.py  export_model_artifacts.py  export_speaker_bin.py  export_voice_clone_prompt.py  generate_voice_clone_prompt_pb2.py  reference_code_pred_debug.cpp  reference_generate_debug.cpp  voice_clone_prompt_pb2.py
testdata/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
