[workspace]
resolver = "2"
members = [
    "crates/qts",
    "crates/qts_cli",
    "crates/qts_ggml_sys",
    "crates/qts_ggml",
    "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yet-another-ai/qts"

[workspace.dependencies]
qts = { path = "crates/qts", version = "0.2.0" }
qts_ggml_sys = { path = "crates/qts_ggml_sys", version = "0.2.0" }
qts_ggml = { path = "crates/qts_ggml", version = "0.2.0" }
thiserror = "2"
rand = "0.10"
anyhow = "1.0.102"
cpal = "0.17"
crossterm = "0.29"
hound = "3.5.1"
libc = "0.2"
ratatui = "0.30"
criterion = "0.8"
prost-build = "0.13"
protoc-bin-vendored = "3"
bindgen = "0.72"
cmake = "0.1"
rustfft = "6.4.1"
prost = "0.14"
sha2 = "0.10"
ort = "2.0.0-rc.9"
windows-sys = "0.61"

[profile.release]
debug = "line-tables-only"
lto = true
codegen-units = 1
panic = "abort"
