[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qts-scripts"
version = "0.1.0"
description = "Python helper scripts for qts."
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "gguf>=0.18.0",
    "grpcio-tools",
    "huggingface-hub>=0.36.2",
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "protobuf",
    "qwen-tts",
    "safetensors>=0.7.0",
    "tqdm>=4.67.3",
]
scripts = { export-voice-clone-prompt = "scripts.export_voice_clone_prompt:main", export-model-artifacts = "scripts.export_model_artifacts:main" }

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
