[package]
name = "ggml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin safe wrappers over ggml-sys for qts."

[features]
default = ["metal", "vulkan"]
metal = ["ggml-sys/metal"]
vulkan = ["ggml-sys/vulkan"]
blas = ["ggml-sys/blas"]
native = ["ggml-sys/native"]

[dependencies]
ggml-sys.workspace = true
