[package]
name = "qts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Qwen3 TTS inference (GGUF + GGML); Rust API for host apps and gdext."
publish = true

[features]
default = ["metal", "vulkan", "coreml"]
metal = ["qts_ggml/metal"]
vulkan = ["qts_ggml/vulkan"]
blas = ["qts_ggml/blas"]
native = ["qts_ggml/native"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]

[dependencies]
qts_ggml.workspace = true
thiserror.workspace = true
rand.workspace = true
hound.workspace = true
rustfft.workspace = true
prost.workspace = true
ort.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[[bench]]
name = "synthesize"
harness = false
