[package]
name = "qts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Qwen3 TTS inference (GGUF + GGML); Rust API for host apps and gdext."
publish = true

[features]
default = ["metal", "vulkan", "coreml", "cuda", "nvrtx", "tensorrt"]
metal = ["qts_ggml/metal"]
vulkan = ["qts_ggml/vulkan"]
blas = ["qts_ggml/blas"]
native = ["qts_ggml/native"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
azure = ["ort/azure"]
cann = ["ort/cann"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
directml = ["ort/directml"]
migraphx = ["ort/migraphx"]
nnapi = ["ort/nnapi"]
nvrtx = ["ort/nvrtx"]
onednn = ["ort/onednn"]
openvino = ["ort/openvino"]
qnn = ["ort/qnn"]
rknpu = ["ort/rknpu"]
tensorrt = ["ort/tensorrt"]
tvm = ["ort/tvm"]
vitis = ["ort/vitis"]
webgpu = ["ort/webgpu"]
xnnpack = ["ort/xnnpack"]

[dependencies]
qts_ggml.workspace = true
thiserror.workspace = true
rand.workspace = true
hound.workspace = true
rustfft.workspace = true
prost.workspace = true
ort.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[[bench]]
name = "synthesize"
harness = false
