[package]
name = "qts_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for Qwen3 TTS synthesis and WAV output."

[features]
default = ["metal", "vulkan", "coreml"]
metal = ["qts/metal"]
vulkan = ["qts/vulkan"]
blas = ["qts/blas"]
native = ["qts/native"]
coreml = ["qts/coreml"]
directml = ["qts/directml"]

[dependencies]
anyhow.workspace = true
cpal.workspace = true
crossterm.workspace = true
hound.workspace = true
libc.workspace = true
qts.workspace = true
ratatui.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }
