[package]
name = "qts_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for Qwen3 TTS synthesis and WAV output."

[features]
default = ["metal", "vulkan", "coreml", "cuda", "nvrtx", "tensorrt"]
metal = ["qts/metal"]
vulkan = ["qts/vulkan"]
blas = ["qts/blas"]
native = ["qts/native"]
acl = ["qts/acl"]
armnn = ["qts/armnn"]
azure = ["qts/azure"]
cann = ["qts/cann"]
coreml = ["qts/coreml"]
cuda = ["qts/cuda"]
directml = ["qts/directml"]
migraphx = ["qts/migraphx"]
nnapi = ["qts/nnapi"]
nvrtx = ["qts/nvrtx"]
onednn = ["qts/onednn"]
openvino = ["qts/openvino"]
qnn = ["qts/qnn"]
rknpu = ["qts/rknpu"]
tensorrt = ["qts/tensorrt"]
tvm = ["qts/tvm"]
vitis = ["qts/vitis"]
webgpu = ["qts/webgpu"]
xnnpack = ["qts/xnnpack"]

[dependencies]
anyhow.workspace = true
cpal.workspace = true
crossterm.workspace = true
hound.workspace = true
libc.workspace = true
qts.workspace = true
ratatui.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }
