[package]
name = "qwen3-tts-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for Qwen3 TTS synthesis and WAV output."

[features]
default = ["metal", "blas", "vulkan", "coreml"]
hf = ["qwen3-tts/hf"]
metal = ["qwen3-tts/metal"]
vulkan = ["qwen3-tts/vulkan"]
blas = ["qwen3-tts/blas"]
native = ["qwen3-tts/native"]
coreml = ["qwen3-tts/coreml"]

[dependencies]
anyhow = "1.0.102"
cpal = "0.16.0"
crossterm = "0.29.0"
hound = "3.5.1"
libc = "0.2"
qwen3-tts = { version = "0.1.0", path = "../qwen3-tts" }
ratatui = "0.29.0"
