[package]
name = "qwen3-tts-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for Qwen3 TTS synthesis and WAV output."

[features]
default = ["metal", "vulkan", "coreml"]
metal = ["qwen3-tts/metal"]
vulkan = ["qwen3-tts/vulkan"]
blas = ["qwen3-tts/blas"]
native = ["qwen3-tts/native"]
coreml = ["qwen3-tts/coreml"]

[dependencies]
anyhow.workspace = true
cpal.workspace = true
crossterm.workspace = true
hound.workspace = true
libc.workspace = true
qwen3-tts.workspace = true
ratatui.workspace = true
