[package]
name = "qwen3-tts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Qwen3 TTS inference (GGUF + GGML); Rust API for host apps and gdext."

[features]
default = []
# Optional Hugging Face cache download helpers (URLs in docs/models.md).
hf = ["dep:hf-hub"]
metal = ["ggml/metal"]
vulkan = ["ggml/vulkan"]
native = ["ggml/native"]

[dependencies]
ggml.workspace = true
thiserror.workspace = true
hf-hub = { workspace = true, optional = true }
rand.workspace = true
hound = "3.5.1"
rustfft = "6.4.1"
prost = "0.13"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[[bench]]
name = "synthesize"
harness = false
