[package]
name = "qwen3-tts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Qwen3 TTS inference (GGUF + GGML); Rust API for host apps and gdext."

[features]
default = ["metal", "blas", "vulkan", "coreml"]
metal = ["ggml/metal"]
vulkan = ["ggml/vulkan"]
blas = ["ggml/blas"]
native = ["ggml/native"]
coreml = ["ort/coreml"]

[dependencies]
ggml.workspace = true
thiserror.workspace = true
rand.workspace = true
hound = "3.5.1"
rustfft = "6.4.1"
prost = "0.13"
ort = "2.0.0-rc.9"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[[bench]]
name = "synthesize"
harness = false
