[package]
name = "qwen3-tts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Qwen3 TTS inference (GGUF + GGML); Rust API for host apps and gdext."

[features]
default = ["metal", "vulkan", "coreml"]
metal = ["ggml/metal"]
vulkan = ["ggml/vulkan"]
blas = ["ggml/blas"]
native = ["ggml/native"]
coreml = ["ort/coreml"]

[dependencies]
ggml.workspace = true
thiserror.workspace = true
rand.workspace = true
hound.workspace = true
rustfft.workspace = true
prost.workspace = true
ort.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[[bench]]
name = "synthesize"
harness = false
